A5/Cloud Computing/20533-ImplementingMicrosoftAzureInfrastructureSolutions-master/Allfiles/Labfiles/Lab07/Starter/Templates/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "adminUsername": {
      "type": "string",
      "metadata": {
        "description": "The name of the administrator account of the VM"
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "The password for the administrator account of the VM"
      }
    },
     "vmSize": {
      "type": "string",
      "metadata": {
        "description": "VM size"
      }
    },
    "dnsNameForPublicIP": {
      "type": "string",
      "defaultValue": "[toLower(concat('l0720533e',uniqueString(resourceGroup().id, deployment().name)))]",
      "metadata": {
        "description": "Unique DNS Name for the Public IP used to access the VM"
      }
    },
    "ubuntuOSVersion": {
      "type": "string",
      "defaultValue": "16.04.0-LTS",
      "metadata": {
        "description": "The Ubuntu version for the VM"
      },
      "allowedValues": [
        "14.04.4-LTS",
        "15.10",
        "16.04.0-LTS"
      ]
    }
  },
  "variables": {
    "imagePublisher": "Canonical",
    "imageOffer": "UbuntuServer",
    "OSDiskName": "20533elab07osdisk01",
    "nicName": "20533E0701-nic",
    "addressPrefix": "10.0.0.0/22",
    "subnetName": "subnet-0",
    "subnetPrefix": "10.0.0.0/24",
    "diskStorageType": "Standard_LRS",
    "publicIPAddressName": "20533E0701-pip",
    "publicIPAddressType": "Dynamic",
    "vmName": "20533E0701-vm0",
    "virtualNetworkName": "20533E0701-vnet",
    "subnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('subnetName'))]",
    "location": "[resourceGroup().location]",
    "networkSecurityGroupName": "20533E0701-web-nsg"
  },
  "resources": [
    {
      "apiVersion": "2018-02-01",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('publicIPAddressName')]",
      "location": "[variables('location')]",
      "properties": {
        "publicIPAllocationMethod": "[variables('publicIPAddressType')]",
        "dnsSettings": {
          "domainNameLabel": "[parameters('dnsNameForPublicIP')]"
        }
      }
    },
    {
      "apiVersion": "2018-02-01",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('virtualNetworkName')]",
      "location": "[variables('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('addressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnetName')]",
            "properties": {
              "addressPrefix": "[variables('subnetPrefix')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2018-02-01",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[variables('nicName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
              },
              "subnet": {
                "id": "[variables('subnetRef')]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
        }
      }
    },
    {
      "apiVersion": "2017-12-01",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[variables('vmName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('nicName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "osProfile": {
          "computerName": "[variables('vmName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('imagePublisher')]",
            "offer": "[variables('imageOffer')]",
            "sku": "[parameters('ubuntuOSVersion')]",
            "version": "latest"
          },
          "osDisk": {
            "name": "[concat(variables('vmName'),'_OSDisk')]",
            "caching": "ReadWrite",
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "[variables('diskStorageType')]"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nicName'))]"
            }
          ]
        }
      }
    },
    {
      "name": "[variables('networkSecurityGroupName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2018-02-01",
      "location": "[variables('location')]",
      "comments": "Network Security Group (NSG) for Primary NIC",
      "properties": {
         "securityRules": [
            {
              "name": "default-allow-ssh",
              "properties": {
                 "priority": 1000,
                 "sourceAddressPrefix": "*",
                 "protocol": "Tcp",
                 "destinationPortRange": "22",
                 "access": "Allow",
                 "direction": "Inbound",
                 "sourcePortRange": "*",
                 "destinationAddressPrefix": "*"
              }
            },
            {
              "name": "custom-allow-http",
              "properties": {
                 "priority": 1100,
                 "sourceAddressPrefix": "*",
                 "protocol": "Tcp",
                 "destinationPortRange": "80",
                 "access": "Allow",
                 "direction": "Inbound",
                 "sourcePortRange": "*",
                 "destinationAddressPrefix": "*"
              }
            },
            {
              "name": "custom-allow-8080",
              "properties": {
                "priority": 1200,
                "sourceAddressPrefix": "*",
                "protocol": "Tcp",
                "destinationPortRange": "8080",
                "access": "Allow",
                "direction": "Inbound",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*"
              }
            }
         ]
      }
    }
  ]
}
